--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
+    "bower": "latest",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
@@ -15,6 +17,7 @@
     "ejs": "^2.3.1",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.0.0",
+    "express-mailer": "^0.3.0",
     "express-session": "^1.12.1",
     "glob": "^5.0.3",
     "method-override": "^2.3.0",
